Understanding Attributes and Output Values in Terraform/multiple instance.tf
provider "aws" {
  region     = "us-east-1"
  access_key = "PUT-YOUR-ACCESS-KEY-HERE"
  secret_key = "PUT-YOUR-SECRET-KEY-HERE"
}

variable "different_name" {
  type    = list(any)
  default = ["dev-webserver", "stage-webserver", "prod-webserver"]
}

resource "aws_instance" "multiple" {
  count         = 3
  ami           = "ami-00c39f71452c08778"
  instance_type = "t2.micro"

  tags = {
    Name = var.different_name[count.index]
  }
}




#This code is using Terraform to create three AWS EC2 instances in the us-east-1 region. 
#The code specifies the access and secret keys to authenticate with the AWS provider using an access key ID and a secret access key. The code also creates a Terraform variable of type list with three strings, and then uses that variable to tag the instances with different names. 
#Lastly this code defines three instances with the AMI ami-00c39f71452c08778 using an instance type of t2.micro.

This code sets up a configuration to create three virtual computers, called instances, in a cloud environment provided by Amazon Web Services (AWS). 
Each instance has a specific name, like "dev-webserver", "stage-webserver", and "prod-webserver".

Here's a breakdown of the code:

1) provider "aws": This tells the system that we're using Amazon Web Services for our cloud infrastructure.
2) region, access_key, and secret_key: These are used to connect to the AWS account and specify the region where the instances will be created.
3) variable "different_name": This is a list of names we want to use for our instances.
4) resource "aws_instance" "multiple": This part of the code creates the instances.
5) count = 3: This tells the system to create three instances.
6) ami and instance_type: These specify the software image and the size of the instances.
7) tags: This section assigns the names to the instances using the list of names provided.

So, in simple terms, this code creates three virtual computers in the AWS cloud, each with a different name.
